# CLion-QT6-Template

./: CMakeLists.txt  icon.rc  res.qrc
src/: main.cpp
src/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/subWidget/: subWidget.cpp  subWidget.h  subWidget.ui
